# tn-spa-bootstrapper

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Aptfile  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Changelog.md  LICENSE.TXT  Pipfile  Procfile  README.md  README.rst  SETUP.md  app.json  buildpack-run.sh  client-app.json  cookiecutter.json  justfile  package-lock.json  package.json  pr-407-review.md  pr-418-code-review.md  pr_code_review.md  pyproject.toml  requirements.txt  setup.py  test.sh  tox.ini
{{cookiecutter.project_slug}}/: .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Makefile  Pipfile  Procfile  README.md  README.rst  app.json  bitbucket-pipelines.yml  db_setup.sh  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yaml  install-ubuntu.sh  justfile  manage.py  package.json  pull_request_template.md  pyproject.toml  pytest.ini  runserver.sh  secrets-template.json
{{cookiecutter.project_slug}}/.github/: app-config.json  environments.json  pull_request_template.md
{{cookiecutter.project_slug}}/.github/scripts/: get-env-config.sh  (+2 more)
{{cookiecutter.project_slug}}/chat/: exceptions.py
{{cookiecutter.project_slug}}/compose/: docker-compose.traefik.yml
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  deployment-locally.rst  deployment-on-heroku.rst  document.rst  index.rst  testing.rst  troubleshooting.rst
{{cookiecutter.project_slug}}/resources/: app-config-js-values.txt  app.config.vars.template.txt  eas-json-values.txt  eas.vars.template.txt
{{cookiecutter.project_slug}}/scripts/: build-docs.sh  deploy-on-heroku.sh  hello-world.sh  init-app.sh  init-db.sh  init-github.sh  install-reqs.sh  release.sh  setup_mobile_config.sh
{{cookiecutter.project_slug}}/server/: README.md  manage.py  runserver.sh  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/terraform/: .gitignore  README.md  app.tf  backend.hcl  backend.tf  dns.tf  ecr.tf  locals.tf  logs.tf  main.tf  outputs.tf  scheduled-tasks.tf  secrets.tf  sg.tf  terraform.tfvars.example  variables.tf  workers.tf
{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug }}/: asgi.py  consumers.py  settings.py  urls.py
(+856 files in other folders)
