[project]
name = "tn-spa-bootstrapper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter==2.1.1",
    "binaryornot==0.4.4",
    "black==22.3.0",
    "isort==5.9.3",
    "flake8==7.1.1",
    "flake8-isort==6.1.1",
    "pre-commit==2.13.0",
    "tox==3.24.0",
    "pytest==6.2.4",
    "pytest-cookies==0.6.1",
    "pytest-instafail==0.4.2",
    "PyYAML==6.0.1",
    "PyGithub==1.55",
    "Jinja2==3.0.1",
    "ruff>=0.1.9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = [
    "[{][{]cookiecutter.project_slug[}][}]",
]